--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=320,maximum-scale=1.3,user-scalable=no">
-		<link rel="stylesheet" href="http://js.ddky.com/c/wap/css/cms/cms1.0.css" />
-		<link rel="stylesheet" href="swiper-3.3.1.min.css" />
-		<script src="jquery-1.11.3.min.js"></script>
-		<script src="swiper3.1.js"></script>
+		<link rel="stylesheet" href="index.css" />
+		<link href="//cdn.bootcss.com/Swiper/3.4.0/css/swiper.min.css" rel="stylesheet">
+		<script src="//cdn.bootcss.com/jquery/2.2.0/jquery.min.js"></script>
+		<script src="//cdn.bootcss.com/Swiper/3.4.0/js/swiper.min.js"></script>
 		<style>
 			.box{
 				width:100%;height: 26px;overflow-x: auto;
